roles/kube_elasticsearch/files/kibana-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "kube-kibana-ingress"
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: '/'
  labels:
    app: kibana
    release: kibana
spec:
  rules:
    - http:
        paths:
          - path: '/_/kibana'
            backend:
              serviceName: "kibana"
              servicePort: 443 # /!\ But it is clear HTTP
